--- a/Node/package.json
+++ b/Node/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^16.4.7",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
